--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
+<p><Copy the URL and append it with a slash followed by your image</p>
 <img src="image1.jpg">
-<img src="image2.jpg">
 </body>
 </html>
